# kanade-tokenizer

./: README.md  demo.ipynb  index.html  pyproject.toml  style.css
config/train/: 12hz_gan.yaml  25hz_gan.yaml
src/kanade_tokenizer/: model.py  pipeline.py
src/kanade_tokenizer/module/: ssl_extractor.py
