[project]
name = "kanade-tokenizer"
version = "0.1.0"
description = "Kanade is a speech tokenizer that encodes speech into compact content tokens and global embeddings and decodes them back to mel spectrograms."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "huggingface_hub",
  "jsonargparse[signatures]",
  "numpy",
  "safetensors",
  "soundfile",
  "torch",
  "torchaudio",
  "tqdm",
  "vocos",
]

[project.optional-dependencies]
train = [
  "einops",
  "lightning",
  "matplotlib",
  "tensorboard",
  "wandb",
]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
